Fixed up title and description

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site Info
-title:              "Animal-Themed Games"
-description:        "Database of games in which animals are the focus or you play as an animal."
+title:              "AGDB: Animal Games Database"
+description:        "This is a database of video games related to animals in which animals are the focus or you can play as an animal."
 
 # Author Info
 author_name:        "Liz Lorena Berberena"
