--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description:        "This is a database of video games related to animals in whi
 author_name:        "Liz Lorena Berberena"
 author_email:       lizlberberena@gmail.com
 github_username:    byliz
-twitter_username:   smugcroc
+twitter_username:   lizlorenadotcom
 
 # Site Settings
 baseurl:            "" # Base URL must end WITHOUT a slash, default: ""
