--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,9 @@ title:              "AGDB: Animal Games Database"
 description:        "This is a database of video games related to animals in which animals are the focus or you can play as an animal."
 
 # Author Info
-author_name:        "Liz Lorena Berberena"
-author_email:       lizlberberena@gmail.com
-github_username:    byliz
-twitter_username:   lizlorenadotcom
+author_name:        "CozyMaus"
+github_username:    cozymaus
+twitter_username:   cozymaus
 
 # Site Settings
 baseurl:            "" # Base URL must end WITHOUT a slash, default: ""
