--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site Info
-title:              "Kemono DB"
-description:        "This is a database of video games featuring kemono or kemonomimi."
+title:              "Dragon Database"
+description:        "This is a database of video games featuring dragons."
 
 # Author Info
 author_name:        "CozyMaus"
@@ -21,7 +21,7 @@ paginate: 5
 disqus:
     # Leave shortname blank to disable comments site-wide.
     # Disable comments for any post by adding `comments: false` to that post's YAML Front Matter.
-    shortname: kemonodb
+    shortname: dragondb
 
 # Site Build
 highlighter: rouge
