--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 # Site Info
 title:              "Dragon Database"
 description:        "This is a database of video games featuring dragons."
+favicon:            https://cozymaus.com/img/dragon-database/purple-gem.png
 
 # Author Info
 author_name:        "CozyMaus"
