--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ paginate: 5
 disqus:
     # Leave shortname blank to disable comments site-wide.
     # Disable comments for any post by adding `comments: false` to that post's YAML Front Matter.
-    shortname: dragondb
+    shortname: cozymaus
 
 # Site Build
 highlighter: rouge
