--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site Info
-title:              "Dragon Database"
-description:        "This is a database of all video games featuring dragons."
+title:              "Animal Games Database"
+description:        "This is a database of all video games featuring playable animals."
 favicon:            https://cozymaus.com/img/dragon-database/pink-gem.png
 
 # Author Info
