--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description:        "This is a database of all video games featuring playable an
 favicon:            https://cozymaus.github.io/img/dragon-database/pink-gem.png
 
 # Author Info
-author_name:        "CozyMaus"
+author_name:        "Liz Lorena Berberena"
 github_username:    cozymaus
 twitter_username:   cozymaus
 
