--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site Info
 title:              "Animal Games Database"
 description:        "This is a database of all video games featuring playable animals."
-favicon:            https://lizlorena.com/img/dragon-database/pink-gem.png
+favicon:            https://lizberberena.com/img/dragon-database/pink-gem.png
 
 # Author Info
 author_name:        "Liz Lorena Berberena"
