--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Site Info
 title:              "Animal Games Database"
 description:        "This is a database of all video games featuring playable animals."
-favicon:            https://lizberberena.com/img/dragon-database/pink-gem.png
+favicon:            /img/dragon-database/pink-gem.png
 
 # Author Info
-author_name:        "Liz Lorena Berberena"
-github_username:    lizberberena
-twitter_username:   lizberberena
+author_name:        "Iris of Lys"
+github_username:    irisoflys
+twitter_username:   irisoflys
 
 # Site Settings
 baseurl:            "" # Base URL must end WITHOUT a slash, default: ""
@@ -22,7 +22,7 @@ paginate: 5
 disqus:
     # Leave shortname blank to disable comments site-wide.
     # Disable comments for any post by adding `comments: false` to that post's YAML Front Matter.
-    shortname: lizberberena
+    shortname: irisoflys
 
 # Site Build
 highlighter: rouge
