--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,8 @@ description:        "This is a database of all video games featuring playable an
 favicon:            /img/dragon-database/pink-gem.png
 
 # Author Info
-author_name:        "Iris of Lys"
-github_username:    irisoflys
-twitter_username:   irisoflys
+author_name:        "Liz Lorena Berberena"
+github_username:    lizberberena
 
 # Site Settings
 baseurl:            "" # Base URL must end WITHOUT a slash, default: ""
@@ -22,7 +21,7 @@ paginate: 5
 disqus:
     # Leave shortname blank to disable comments site-wide.
     # Disable comments for any post by adding `comments: false` to that post's YAML Front Matter.
-    shortname: irisoflys
+    shortname: lizlorena
 
 # Site Build
 highlighter: rouge
