--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@ description:        "This is a database of all video games featuring playable an
 favicon:            /img/dragon-database/pink-gem.png
 
 # Author Info
-author_name:        "Liz Lorena Berberena"
-github_username:    lizberberena
+author_name:        "Liz Lorena"
+github_username:    liz-lorena
 
 # Site Settings
 baseurl:            "" # Base URL must end WITHOUT a slash, default: ""
